--- a/client/sass/modules/_inputs.scss
+++ b/client/sass/modules/_inputs.scss
@@ -90,7 +90,7 @@
 	margin: 10px auto !important;
 	position: absolute;
 	width: initial;
-	z-index: 10;
+	// z-index: 10;
 	background: transparent;
 	color: $white;
 	font-weight: 400;
